--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -29,10 +29,10 @@
 
   /* Colors */
   // User editable theme colors
-  --primary-background-color: #3b3b3d;
+  --primary-background-color: #2b0026;
   --primary-foreground-color: #f9f9fb;
-  --secondary-background-color: #1b1b1d;
-  --secondary-foreground-color: #d9d9dc;
+  --secondary-background-color: #033700;
+  --secondary-foreground-color: #dbffd7;
 
   // Red - error
   --error-color: #bf2323;
