--- a/component-library/components/generic/form/email-input/email-input.scss
+++ b/component-library/components/generic/form/email-input/email-input.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    color: var(--primary-foreground, #F9F9FB);
+    color: var(--primary-foreground-color, #F9F9FB);
 
     &__label {
         font-size: var(--label);
@@ -14,7 +14,7 @@
         border-radius: 4px;
         border: 2px solid;
         background-color: transparent;
-        color: var(--primary-foreground, #F9F9FB);
+        color: var(--primary-foreground-color, #F9F9FB);
 
         &::placeholder {
             opacity: 1;
@@ -32,7 +32,7 @@
         gap: 8px;
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
-        color: var(--primary-foreground, #F9F9FB);
+        color: var(--primary-foreground-color, #F9F9FB);
     }
         
     &__error {
