--- a/component-library/components/sections/form/form.scss
+++ b/component-library/components/sections/form/form.scss
@@ -1,5 +1,5 @@
 .c-form {
-    color: var(--primary-foreground, #F9F9FB);
+    color: var(--primary-foreground-color, #F9F9FB);
     display: grid;
     grid-template-columns: var(--twelve-column-grid);
     row-gap: 48px;
