--- a/component-library/components/sections/hero/hero.scss
+++ b/component-library/components/sections/hero/hero.scss
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-columns: var(--twelve-column-grid);
   grid-template-rows: minmax(0, 1fr);
-  color: var(--primary-foreground, #f9f9fb);
+  color: var(--primary-foreground-color, #f9f9fb);
   &__cover {
-    background-color: var(secondary-background-color, rgba(27, 27, 29, 1));
+    background-color: var(secondary-background-color-color, rgba(27, 27, 29, 1));
     grid-row: 1 / -1;
     grid-column: 1 / -1;
   }
