--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -32,9 +32,9 @@
 
         <div class="{{ c }}__social-icons">
             {% capture social_icon_styles %}
-                icon_background_hover_color: "var(--primary-foreground, #E9E9EC)"
-                icon_color: "var(--primary-foreground, #E9E9EC)"
-                icon_hover_color: "var(--secondary-background, #f9f9fb)"
+                icon_background_hover_color: "var(--primary-foreground-color, #E9E9EC)"
+                icon_color: "var(--primary-foreground-color, #E9E9EC)"
+                icon_hover_color: "var(--secondary-background-color, #f9f9fb)"
             {% endcapture %}
             {% assign social_icons_style = social_icon_styles | ymlify %}
             {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
