--- a/component-library/components/generic/form/date-input/date-input.scss
+++ b/component-library/components/generic/form/date-input/date-input.scss
@@ -1,7 +1,7 @@
 .c-date-input {
     display: grid;
     gap: 4px;
-    color: var(--primary-foreground-color, #F9F9FB);
+    color: var(--main-text-color);
 
     &__label {
         font-size: var(--label);
@@ -19,7 +19,7 @@
         border: 2px solid;
         position: relative;
         background-color: transparent;
-        color: var(--primary-foreground-color, #F9F9FB);
+        color: var(--main-text-color);
         
         &::placeholder {
             opacity: 1;
@@ -50,7 +50,7 @@
         gap: 8px;
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
-        color: var(--primary-foreground-color, #F9F9FB);
+        color: var(--main-text-color);
     }
 
     &__icon, &__input, &__dropdown-arrow {
