--- a/component-library/components/sections/centered-large-asset/centered-large-asset.scss
+++ b/component-library/components/sections/centered-large-asset/centered-large-asset.scss
@@ -1,5 +1,5 @@
 .c-centered-large-asset {
-    color: var(--primary-foreground-color, #F9F9FB);
+    color: var(--main-text-color);
     display: grid;
     grid-template-columns: var(--twelve-column-grid);
     row-gap: 48px;
