--- a/component-library/components/generic/form/text-area-input/text-area-input.scss
+++ b/component-library/components/generic/form/text-area-input/text-area-input.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    color: var(--primary-foreground-color, #F9F9FB);
+    color: var(--main-text-color);
 
     &__label {
         font-size: var(--label);
@@ -16,7 +16,7 @@
         width: 100%;
         resize: vertical;
         background-color: transparent;
-        color: var(--primary-foreground-color, #F9F9FB);
+        color: var(--main-text-color);
 
         &::placeholder {
             opacity: 1;
@@ -34,7 +34,7 @@
         gap: 8px;
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
-        color: var(--primary-foreground-color, #F9F9FB);
+        color: var(--main-text-color);
     }
         
     &__error {
