--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -29,10 +29,10 @@
 
   /* Colors */
   // User editable theme colors
-  --primary-background-color: #fff;
-  --primary-foreground-color: #000;
-  --secondary-background-color: #000;
-  --secondary-foreground-color: #fff;
+  --primary-background-color: purple;
+  --primary-foreground-color: #000000;
+  --secondary-background-color: red;
+  --secondary-foreground-color: #ffffff;
 
   // FOR INTERNAL USE
   --main-background-color: var(--primary-background-color, #3B3B3D);
