--- a/component-library/components/simple/gallery/gallery.scss
+++ b/component-library/components/simple/gallery/gallery.scss
@@ -4,13 +4,23 @@
     place-items: center;
 
     &__tiles {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: 1fr;
+        display: flex;
+        flex-wrap: wrap;
+        place-content: center;
         gap: 24px;
 
         &__tile {
             aspect-ratio: 1 / 1;
+            width: 100%;
+
+            @media screen and (min-width: 769px) {
+                width: calc((100% - 24px) / 2);
+            }
+    
+            @media screen and (min-width: 1024px) {
+                width: calc((100% - 48px) / 3);
+            }
+
             .c-image,
             .c-image--live-editing,
             picture {
@@ -25,12 +35,5 @@
             }
         }
 
-        @media screen and (min-width: 769px) {
-            grid-template-columns: 1fr 1fr;
-        }
-
-        @media screen and (min-width: 1024px) {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
     }
 }
