--- a/component-library/components/generic/button/button.scss
+++ b/component-library/components/generic/button/button.scss
@@ -25,6 +25,10 @@
       color: var(--alt-text-color);
       border: 2px solid var(--alt-text-color);
       background: var(--alt-background-color);
+      
+      .c-icon__image, .c-icon__svg {
+        --c-icon-color: var(--alt-text-color);
+      }
     }
   }
 
