--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -12,7 +12,7 @@
         {% include 'partials/head/google-fonts.html' %}
     </head>
     <body>
-        {% include 'partials/nav/navigation.html' %}
+        {% include 'partials/nav/navigation.html' _live_reload:false %}
         <main>
             {% bookshop_include "page" content_blocks: content_blocks %}
             {{ content }}
