--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -37,7 +37,7 @@
                 icon_hover_color: "var(--brand-grey-900, #f9f9fb)"
             {% endcapture %}
             {% assign social_icons_style = social_icon_styles | ymlify %}
-            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style _live_reload:false %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
         </div>
     </nav>
 </header>
