--- a/src/_includes/partials/footer/footer.html
+++ b/src/_includes/partials/footer/footer.html
@@ -15,7 +15,7 @@
                 icon_hover_color: "var(--brand-grey-900, #f9f9fb)"
             {% endcapture %}
             {% assign social_icons_style = social_icon_styles | ymlify %}
-            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style _liveRender:false %}
         </div>
     <ul class="{{ c }}__navlist">
         {% for navitem in footer.navigation_items %}
