--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -1,7 +1,7 @@
 {% assign_local c = "c-contact-block" %}
 
 <section class="{{ c }} component {{ c }}
-    {% if styles.orientation == "Left" %}
+    {% if styles.map_alignment == "Left" %}
         {{ c }}--map-left
     {% endif %} 
     {% if styles.background_variant == "dark" %} 
