--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -1,12 +1,12 @@
 {% assign_local c = "c-contact-block" %}
 
-<section class="{{ c }} component {{ c }}
+<section class='{{ c }} component {{ c }}
     {% if styles.map_alignment == "Left" %}
         {{ c }}--map-left
     {% endif %} 
     {% if styles.background_variant == "dark" %} 
         component--dark
-    {% endif %}">
+    {% endif %}'>
   <div class="{{ c }}__content">
     <div class="{{ c }}__content-wrapper">            
         {% if content.social_icons %}
